--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "crawler": "sylvinus/node-crawler",
     "ngraph.forcelayout3d": "0.0.12",
     "ngraph.graph": "0.0.11",
+    "ngraph.offline.layout": "^1.0.0",
+    "ngraph.tobinary": "^1.0.1",
     "request-promise": "^0.4.2",
     "semver": "^4.3.4"
   }
